# playgroundZ

./: .gitmodules  .travis.yml  README.md
Bazel/: BUILD.bazel  WORKSPACE  playground.bazelproject
Bazel/Main/: BUILD.bazel  main.cpp
Bazel/Main/Libraries/: awesome_class.cpp  awesome_class.h
Bazel/Main/Test/: test.cpp
Bazel/src/: main.cpp
CMake/: CMakeLists.txt
CMake/src/: main.cpp
Meson/: main.cpp  meson.build
